--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
               <p class="para">Togheter we keep each other safe at home or at work.
                  By paying a tiny fee a day, you are fully insured all
-                 day long. You get it all as little as <span>$0.4 per day</span>
+                 day long. You get it all as little as <span class="test3">$0.4 per day</span>
               </p>
                         
             <input class="btn" value="JOIN NOW">
-
+        
             </div>
             <div class="learn">
                 <p>Whad do we have to offer?</p>
@@ -95,8 +95,6 @@
 
 </section>
  </footer>
-
-
 </body>
 </html>
 
