--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
             </header>
 
 
-            <p class="para">Togheter we keep each other safe at home or at work.
-                By paying a tiny fee a day, you are fully insured all
-                day long. You get it all as little as <span class="test3">$0.4 per day</span>
+            <p class="para">Togheter we keep each other safe at home or at work. By paying a tiny fee a day, you are fully insured all day long. You get it all as little as <span class="test3">$0.4 per day</span>
             </p>
 
             <input class="btn" value="JOIN NOW">
@@ -33,7 +31,7 @@
     </div>
     <div class="learn">
         <p class="para2">Whad do we have to offer?</p>
-        <h2>Learn more</h2>
+        <h2 class="learn-more">Learn more</h2>
     </div>
     <div class="join">
         <p>what are you waiting for?</p>
@@ -46,21 +44,17 @@
 
             <div class="personal">
                 <h2>Your personal financial saftey net online</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro esse, quidem provident
-                    aspernatur modi beatae, debitis, accusamus vero veniam natus ducimus? Quas eum eos quisquam ipsa
-                    quaerat deserunt nemo ad repellat, tenetur enim atque? Aspernatur, aperiam illo accusamus laudantium
-                    labore ipsa corporis harum dolorum vero odio. Harum nisi soluta impedit alias inventore nesciunt.
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro esse, quidem provident aspernatur modi beatae, debitis, accusamus vero veniam natus ducimus? Quas eum eos quisquam ipsa quaerat deserunt nemo ad repellat, tenetur enim
+                    atque? Aspernatur, aperiam illo accusamus laudantium labore ipsa corporis harum dolorum vero odio. Harum nisi soluta impedit alias inventore nesciunt.
                 </p>
             </div>
-            <div class="childd">
+            <div class="child">
                 <ul>
                     <li>
                         <figure class="child">
                             <img src="img/child.png" alt="child" class="child">
                             <h2 class="child-txt">Children</h2>
-                            <blockquote class="child-quote">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Voluptatem fugiat corrupti modi eum, quae veniam officia aliquam sint. Adipisci at
-                                impedit amet facere sapiente voluptatem possimus inventore quam.
+                            <blockquote class="child-quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fugiat corrupti modi eum, quae veniam officia aliquam sint. Adipisci at impedit amet facere sapiente voluptatem possimus inventore quam.
 
                             </blockquote>
                         </figure>
@@ -70,11 +64,7 @@
                             <img src="img/adult.png" alt="Adult">
                             <h2>Just right</h2>
                             <blockquote>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore maxime doloribus, ea
-                                porro
-                                neque rerum saepe reprehenderit iure deleniti facere officia velit ut perspiciatis,
-                                magnam in
-                                corrupti sint qui nisi.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore maxime doloribus, ea porro neque rerum saepe reprehenderit iure deleniti facere officia velit ut perspiciatis, magnam in corrupti sint qui nisi.
                             </blockquote>
                         </figure>
                     </li>
@@ -83,11 +73,7 @@
                             <img src="img/old.png" alt="old">
                             <h2>Old fart</h2>
                             <blockquote>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore maxime doloribus, ea
-                                porro
-                                neque rerum saepe reprehenderit iure deleniti facere officia velit ut perspiciatis,
-                                magnam in
-                                corrupti sint qui nisi.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore maxime doloribus, ea porro neque rerum saepe reprehenderit iure deleniti facere officia velit ut perspiciatis, magnam in corrupti sint qui nisi.
                             </blockquote>
                         </figure>
                     </li>
@@ -99,13 +85,9 @@
     <footer>
         <section>
             <h1>About US</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis ad iste consequatur recusandae? Ipsam
-                illo laborum nisi porro nam sed quaerat voluptate magnam perspiciatis, ullam ipsa iusto? Blanditiis
-                neque culpa sequi! Nihil quibusdam, distinctio impedit odio nam veniam ipsam ratione alias ex iure
-                libero sunt saepe unde vero quo illum assumenda tempore cumque? Natus odio eligendi, eum repellat
-                praesentium qui culpa sequi ab modi sint earum placeat voluptatum incidunt rerum facere. Blanditiis,
-                dolore. Ad ab et odit? Cumque ipsa, consequuntur ut nihil repellendus quos nulla cupiditate veniam.
-                Magnam illum deleniti in hic rem nemo delectus!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis ad iste consequatur recusandae? Ipsam illo laborum nisi porro nam sed quaerat voluptate magnam perspiciatis, ullam ipsa iusto? Blanditiis neque culpa sequi! Nihil quibusdam,
+                distinctio impedit odio nam veniam ipsam ratione alias ex iure libero sunt saepe unde vero quo illum assumenda tempore cumque? Natus odio eligendi, eum repellat praesentium qui culpa sequi ab modi sint earum placeat voluptatum incidunt
+                rerum facere. Blanditiis, dolore. Ad ab et odit? Cumque ipsa, consequuntur ut nihil repellendus quos nulla cupiditate veniam. Magnam illum deleniti in hic rem nemo delectus!</p>
             <h1>How It works?</h1>
             <h2 class="quote1"> Answer a few questions about yourself
             </h2>
