--- a/index.html
+++ b/index.html
@@ -25,25 +25,27 @@
 
 
 
-            <div class="backround"> <img class="background2" src="/img/family.png" alt="picture of the familys">
+            <div class="bg1"> <img class="bg2" src="/img/family.png " alt="picture of the familys">
             </div>
-        </section>
+
+
     </div>
     <div class="learn">
-        <p class="para2">Whad do we have to offer?</p>
-        <h2 class="learn-more">Learn more</h2>
-    </div>
-    <div class="join">
-        <p>what are you waiting for?</p>
-        <h2>Join today</h2>
+        <p class="para2 ">Whad do we have to offer?</p>
+        <h2 class="learn-more ">Learn more</h2>
     </div>
 
+    <div class="join">
+        <p class="waiting">what are you waiting for?</p>
+        <h2 class="jointoday">Join today</h2>
+    </div>
+    </section>
 
     <div class="mitten">
         <section class="mitten">
 
             <div class="personal">
-                <h2>Your personal financial saftey net online</h2>
+                <h2 class="mittenhead">Your personal financial saftey net online</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro esse, quidem provident aspernatur modi beatae, debitis, accusamus vero veniam natus ducimus? Quas eum eos quisquam ipsa quaerat deserunt nemo ad repellat, tenetur enim
                     atque? Aspernatur, aperiam illo accusamus laudantium labore ipsa corporis harum dolorum vero odio. Harum nisi soluta impedit alias inventore nesciunt.
                 </p>
@@ -52,16 +54,16 @@
                 <ul>
                     <li>
                         <figure class="child">
-                            <img src="img/child.png" alt="child" class="child">
-                            <h2 class="child-txt">Children</h2>
-                            <blockquote class="child-quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fugiat corrupti modi eum, quae veniam officia aliquam sint. Adipisci at impedit amet facere sapiente voluptatem possimus inventore quam.
+                            <img src="img/child.png " alt="child " class="child ">
+                            <h2 class="child-txt ">Children</h2>
+                            <blockquote class="child-quote ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fugiat corrupti modi eum, quae veniam officia aliquam sint. Adipisci at impedit amet facere sapiente voluptatem possimus inventore quam.
 
                             </blockquote>
                         </figure>
 
 
                         <figure>
-                            <img src="img/adult.png" alt="Adult">
+                            <img src="img/adult.png " alt="Adult ">
                             <h2>Just right</h2>
                             <blockquote>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore maxime doloribus, ea porro neque rerum saepe reprehenderit iure deleniti facere officia velit ut perspiciatis, magnam in corrupti sint qui nisi.
@@ -70,7 +72,7 @@
                     </li>
                     <li>
                         <figure>
-                            <img src="img/old.png" alt="old">
+                            <img src="img/old.png " alt="old ">
                             <h2>Old fart</h2>
                             <blockquote>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore maxime doloribus, ea porro neque rerum saepe reprehenderit iure deleniti facere officia velit ut perspiciatis, magnam in corrupti sint qui nisi.
@@ -89,15 +91,15 @@
                 distinctio impedit odio nam veniam ipsam ratione alias ex iure libero sunt saepe unde vero quo illum assumenda tempore cumque? Natus odio eligendi, eum repellat praesentium qui culpa sequi ab modi sint earum placeat voluptatum incidunt
                 rerum facere. Blanditiis, dolore. Ad ab et odit? Cumque ipsa, consequuntur ut nihil repellendus quos nulla cupiditate veniam. Magnam illum deleniti in hic rem nemo delectus!</p>
             <h1>How It works?</h1>
-            <h2 class="quote1"> Answer a few questions about yourself
+            <h2 class="quote1 "> Answer a few questions about yourself
             </h2>
-            <h2 class="quote2"> Choose a plan. Get a quote.
+            <h2 class="quote2 "> Choose a plan. Get a quote.
             </h2>
-            <h2 class="quote3"> Answer some questions about your medical history.
+            <h2 class="quote3 "> Answer some questions about your medical history.
             </h2>
-            <h2 class="quote4"> wait 90 sec to get approved.
+            <h2 class="quote4 "> wait 90 sec to get approved.
             </h2>
-            <h2 class="quote5">Done!
+            <h2 class="quote5 ">Done!
             </h2>
 
         </section>
