--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="learn">
         <p class="para2 ">Whad do we have to offer?</p>
-        <h2 class="learn-more ">Learn more</h2>
+        <h2 class="learn-more">Learn more</h2>
     </div>
 
     <div class="join">
@@ -46,21 +46,22 @@
 
             <div class="personal">
                 <h2 class="mittenhead">Your personal financial saftey net online</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro esse, quidem provident aspernatur modi beatae, debitis, accusamus vero veniam natus ducimus? Quas eum eos quisquam ipsa quaerat deserunt nemo ad repellat, tenetur enim
+                <p class="para3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro esse, quidem provident aspernatur modi beatae, debitis, accusamus vero veniam natus ducimus? Quas eum eos quisquam ipsa quaerat deserunt nemo ad repellat, tenetur enim
                     atque? Aspernatur, aperiam illo accusamus laudantium labore ipsa corporis harum dolorum vero odio. Harum nisi soluta impedit alias inventore nesciunt.
                 </p>
             </div>
-            <div class="child">
+            <div class="figurebox">
                 <ul>
                     <li>
-                        <figure class="child">
-                            <img src="img/child.png " alt="child " class="child ">
-                            <h2 class="child-txt ">Children</h2>
-                            <blockquote class="child-quote ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fugiat corrupti modi eum, quae veniam officia aliquam sint. Adipisci at impedit amet facere sapiente voluptatem possimus inventore quam.
+                        <div class="firstbox">
+                            <figure class="childd">
+                                <img src="img/child.png " alt="child " class="child2">
+                                <h2 class="child-txt ">Children</h2>
+                                <blockquote class="child-quote ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fugiat corrupti modi eum, quae veniam officia aliquam sint. Adipisci at impedit amet facere sapiente voluptatem possimus inventore quam.
 
-                            </blockquote>
-                        </figure>
-
+                                </blockquote>
+                            </figure>
+                        </div>
                         <figure>
                             <img src="img/adult.png " alt="Adult ">
                             <h2>Just right</h2>
