--- a/index.html
+++ b/index.html
@@ -4,106 +4,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Insurance grid</title>
+    <title>insurance grid</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-    <div class="hero-bg">
 
-        <section class="top-container">
-
-            <header>
-                <h1 class="test">We´ve got you Covered.</h1>
-            </header>
-
-
-            <p class="para">Togheter we keep each other safe at home or at work. By paying a tiny fee a day, you are fully insured all day long. You get it all as little as <span class="test3">$0.4 per day</span>
-            </p>
-
-            <input class="btn" value="JOIN NOW">
-
-
-
-            <div class="bg1"> <img class="bg2" src="/img/family.png " alt="picture of the familys">
+    <div class="wrapper">
+        <header id="start">
+            <div class="hero .grid-container">
+                <section class="hero-main">
+                    <h1>We've got you Covered</h1>
+                    <p>
+                        Together we keep each other safe at home or at work. By paying a tiny fee a day, you are fully insured all day long. You get it all for as little as <span class="white-text">$0.4 per pay.</span>
+                    </p>
+                    <a href="#" class="btn">Join Now</a>
+                    <img class="family" src="./img/family.png" alt="picture of the family" />
+                </section>
+                <section class="hero-aside hero-lm">
+                    <p>What do we have to offer?</p>
+                    <h3>Learn more</h3>
+                </section>
+                <section class="hero-aside hero-jt">
+                    <p>What are you waiting for?</p>
+                    <h3>Join today</h3>
+                </section>
             </div>
-
-
-    </div>
-    <div class="learn">
-        <p class="para2 ">Whad do we have to offer?</p>
-        <h2 class="learn-more">Learn more</h2>
-    </div>
-
-    <div class="join">
-        <p class="waiting">what are you waiting for?</p>
-        <h2 class="jointoday">Join today</h2>
-        </section>
-    </div>
-
-    <div class="mitten">
-        <section class="mitten">
-
-            <div class="personal">
-                <h2 class="mittenhead">Your personal financial saftey net online</h2>
-                <p class="para3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro esse, quidem provident aspernatur modi beatae, debitis, accusamus vero veniam natus ducimus? Quas eum eos quisquam ipsa quaerat deserunt nemo ad repellat, tenetur enim
-                    atque? Aspernatur, aperiam illo accusamus laudantium labore ipsa corporis harum dolorum vero odio. Harum nisi soluta impedit alias inventore nesciunt.
-                </p>
-            </div>
-            <div class="figurebox">
-                <ul>
-                    <li>
-                        <div class="firstbox">
-                            <figure class="childd">
-                                <img src="img/child.png " alt="child " class="child2">
-                                <h2 class="child-txt ">Children</h2>
-                                <blockquote class="child-quote ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fugiat corrupti modi eum, quae veniam officia aliquam sint. Adipisci at impedit amet facere sapiente voluptatem possimus inventore quam.
-
-                                </blockquote>
-                            </figure>
-                        </div>
-                        <figure>
-                            <img src="img/adult.png " alt="Adult ">
-                            <h2>Just right</h2>
-                            <blockquote>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore maxime doloribus, ea porro neque rerum saepe reprehenderit iure deleniti facere officia velit ut perspiciatis, magnam in corrupti sint qui nisi.
-                            </blockquote>
-                        </figure>
+            <nav>
+                <ul class="nav-menu">
+                    <li class="nav-menu_item">
+                        <a href="index.html" class="nav-menu_link nav-menu_link--active">Home</a>
                     </li>
-                    <li>
-                        <figure>
-                            <img src="img/old.png " alt="old ">
-                            <h2>Old fart</h2>
-                            <blockquote>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore maxime doloribus, ea porro neque rerum saepe reprehenderit iure deleniti facere officia velit ut perspiciatis, magnam in corrupti sint qui nisi.
-                            </blockquote>
-                        </figure>
+                    <li class="nav-menu_item">
+                        <a href="#" class="nav-menu_link">Our offer</a>
+                    </li>
+                    <li class="nav-menu_item">
+                        <a href="#" class="nav-menu_link">Why us</a>
+                    </li>
+                    <li class="nav-menu__item">
+                        <a href="contact.html" class="nav-menu_link">Contact</a>
                     </li>
                 </ul>
-
-            </div>
-        </section>
+            </nav>
+        </header>
     </div>
-    <footer>
-        <section>
-            <h1>About US</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis ad iste consequatur recusandae? Ipsam illo laborum nisi porro nam sed quaerat voluptate magnam perspiciatis, ullam ipsa iusto? Blanditiis neque culpa sequi! Nihil quibusdam,
-                distinctio impedit odio nam veniam ipsam ratione alias ex iure libero sunt saepe unde vero quo illum assumenda tempore cumque? Natus odio eligendi, eum repellat praesentium qui culpa sequi ab modi sint earum placeat voluptatum incidunt
-                rerum facere. Blanditiis, dolore. Ad ab et odit? Cumque ipsa, consequuntur ut nihil repellendus quos nulla cupiditate veniam. Magnam illum deleniti in hic rem nemo delectus!</p>
-            <h1>How It works?</h1>
-            <h2 class="quote1 "> Answer a few questions about yourself
-            </h2>
-            <h2 class="quote2 "> Choose a plan. Get a quote.
-            </h2>
-            <h2 class="quote3 "> Answer some questions about your medical history.
-            </h2>
-            <h2 class="quote4 "> wait 90 sec to get approved.
-            </h2>
-            <h2 class="quote5 ">Done!
-            </h2>
-
-        </section>
-    </footer>
 </body>
 
 </html>
