--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
                 <section class="hero-main">
                     <h1>We've got you Covered</h1>
                     <p>
-                        Together we keep each other safe at home or at work. By paying a tiny fee a day, you are fully insured all day long. You get it all for as little as <span class="white-text">$0.4 per pay.</span>
+                        Together we keep each other safe at home or at work. By paying a tiny fee a day, you are fully insured all day long. You get it all for as little as <span class="white-text">$0.4 per
+                            pay.</span>
                     </p>
                     <a href="#" class="btn">Join Now</a>
                     <img class="family" src="./img/family.png" alt="picture of the family" />
