--- a/project hemsida/index.html
+++ b/project hemsida/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,16 +9,16 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-
 <body>
-    <div class="header">
+    <div class="wrapper">
+    <div class="header" id="start">
         <div class="main">
             <div>
-                <div class="main-content">
+                    <div class="main-content">
                     <h1>We´ve got you Covered.</h1>
-                    <p>Together we keep each other safe at home or at work. By paying a tiny fee a day, you are fully insured all day long. You get it all for as little as <span>$0.4 per pay.</span></p>
+                    <p>Together we keep each other safe at home or at work. By paying a tiny fee a day, you are fully insured  all day long. You get it all for as little as <span>$0.4 per pay.</span></p>
                     <button class="btn"><a href="#">JOIN NOW</a></button>
-                </div>
+                    </div>
             </div>
         </div>
         <div class="aside">
@@ -47,15 +46,13 @@
             <button class="btn"><a href="#">JOIN NOW</a></button>
         </div>
         <div class="cta-txt">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor ligula vel felis cursus egestas. Etiam consectetur finibus facilisis. Proin accumsan auctor purus, quis finibus tellus accumsan id. Quisque tellus elit, ullamcorper sed mollis
-                ac, interdum vel enim. Pellentesque congue felis eget lorem tempor blandit. Mauris hendrerit ullamcorper ex quis congue donec vel finibus libero. Mauris hendrerit ullamcorper ex quis congue donec vel finibus libero.
-            </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor ligula vel felis cursus egestas. Etiam consectetur finibus facilisis. Proin accumsan auctor purus, quis finibus tellus accumsan id. Quisque tellus elit, ullamcorper sed mollis ac, interdum vel enim. Pellentesque congue felis eget lorem tempor blandit. Mauris hendrerit ullamcorper ex quis congue donec vel finibus libero. </p>
         </div>
     </section>
     <div class="cards">
         <div class="card">
             <div class="rectangle blue">
-                <img src="img/children.svg" alt="children">
+            <img src="img/children.svg" alt="children">
             </div>
             <h3 class="title">Children</h3>
             <p class="cards-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor ligula vel felis cursus egestas. Etiam consectetur finibus facilisis. Proin accumsan auctor purus, quis finibus tellus accumsan id.</p>
@@ -77,8 +74,7 @@
     </div>
     <div class="about-us">
         <h1>About us</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac ultricies massa. Donec id malesuada magna. Pellentesque aliquet libero erat, fermentum commodo sapien congue ac. Integer a elit lorem. Vestibulum id venenatis diam, et eleifend
-            augue. Curabitur ex tortor, auctor lobortis augue at, euismod bibendum neque. Aenean ullamcorper nibh vitae orci laoreet, eu dictum nisi ultrices. Sed condimentum nibh neque, at ultricies augue facilisis non.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac ultricies massa. Donec id malesuada magna. Pellentesque aliquet libero erat, fermentum commodo sapien congue ac. Integer a elit lorem. Vestibulum id venenatis diam, et eleifend augue. Curabitur ex tortor, auctor lobortis augue at, euismod bibendum neque. Aenean ullamcorper nibh vitae orci laoreet, eu dictum nisi ultrices. Sed condimentum nibh neque, at ultricies augue facilisis non.</p>
         <p> Pellentesque a tellus mauris. Nam sodales pretium rutrum. Aenean imperdiet, leo nec consectetur blandit, risus erat commodo tortor, sit amet dignissim orci lorem vel felis. Ut tempus dignissim.</p>
     </div>
 
@@ -107,15 +103,17 @@
             <h4>Done!</h4>
         </div>
     </div>
-
+    
     <div class="backtotop">
+        <a href="#start">
         <img src="img/Vector.svg" alt="back-top">
+        </a>
         <h4>Take me up again!</h4>
     </div>
 
     <div class="footer">
         <p>a</p>
     </div>
+</div>
 </body>
-
 </html>
