--- a/project hemsida/index.html
+++ b/project hemsida/index.html
@@ -38,7 +38,7 @@
         <li><a href="#" class="active">Home</a> </li>
         <li><a href="#">Our office</a> </li>
         <li><a href="#">Why us</a> </li>
-        <li><a href="#">Contact</a> </li>
+        <li><a href="contact.html">Contact</a> </li>
     </nav>
     <section class="cta">
         <div class="cta-heading">
@@ -112,7 +112,7 @@
     </div>
 
     <div class="footer">
-        <p>a</p>
+        <p></p>
     </div>
 </div>
 </body>
