--- a/beer/index.html
+++ b/beer/index.html
@@ -23,10 +23,12 @@
                     <li id="exit" class="exit-btn hide-desktop">
                         <img src="exit.svg" alt="exit menu">
                     </li>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Beer</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="index.html" class="link1">Home</a></li>
+                    <li><a href="beer.html">Beer</a></li>
                     <li><a href="#">Contact</a></li>
+                    <li>
+                        <input type="text" name="search" placeholder="Search.." class="search1" results="0">
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -78,7 +80,7 @@
     <div class="container">
         <h2>Search For a beer</h2>
         <input type="text" name="search" placeholder="Search.." class="search">
-        <p>return value</p>
+
     </div>
     <footer>
         <div class="footer">
